Promise script made

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>HELLO WORLD!</h1>
-    <script src="trial.js"></script>
+    <script src="promise.js"></script>
 </body>
 </html>
