Async and await

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>HELLO WORLD!</h1>
-    <script src="promise.js"></script>
+    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="promiseAll.js"></script> -->
+    <script src="AsyncAwait.js"></script>
+
 </body>
 </html>
